@@ -2,8 +2,12 @@ Mon Nov 23 13:37:00 2009 Damien Churchill <damoxc@gmail.com>
 	* _mssql.pyx:
 		+ feature: add support for varbinary types
 		+ feature: add support for passing in charset to _quote_data
-		+ bugfix: rename MSSQLConnection.next_result to MSSQLConnection.nextresult as before
+		+ bugfix: rename MSSQLConnection.next_result to 
+		          MSSQLConnection.nextresult as before
 		+ bugfix: set the charset upon login
+		+ feature: rewrite _remove_locale using C types instead, 20x faster
+		+ feature: add a charset param to quote_data and relating funcs that
+		           allows the charset to be specified for unicode encodes.
 	* pymssql.pyx:
 		+ feature: add DSN support that was missing
 		+ bugfix: fix rowcount property
